[Done]   z-index issu fixed

--- a/dashboard/assets/css/modal.css
+++ b/dashboard/assets/css/modal.css
@@ -411,6 +411,7 @@ body {
 .select_menu2 .statusOptions {
   position: absolute;
   /* width: 200px; */
+  z-index: -10;
   overflow-y: auto;
   max-height: 295px;
   padding: .5px;
@@ -500,6 +501,7 @@ body {
 
 .select-menu .options {
   position: absolute;
+  z-index: -10;
   width: 200px;
   overflow-y: auto;
   max-height: 295px;
